# srt-multiview

./: .gitignore  LICENSE  README.md  app.py  build_exe.ps1  config.json  core.py  desktop_app.py  pyproject.toml  requirements.txt  run_app.py  srt_multiview.spec
.github/workflows/: build-windows-exe.yml
srt_multiview/: __init__.py  core.py  paths.py  styles.py  ui.py
